rns-lang/tests/snapshots/error-parser-outside_class_directive-public_keyword_werror.snap
---
source: jasm/tests/jasm_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
   public
.class public HelloWorld
----- STDERR -----
[PARSER-001] Error: unexpected keyword before class definition
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/jasm/test_data/integration/error/parser/outside_class_directive/public_keyword.ja:1:4 ]
   │
 1 │    public
   │    ───┬──  
   │       ╰──── this keyword must appear inside a class definition
   │ 
   │ Note: Access flags must appear within a '.class' or '.method' directive.
───╯
----- HASH -----
not generated
