rns-lang/tests/snapshots/error-parser-outside_class_directive-static_keyword_werror.snap
---
source: jasm/tests/jasm_test.rs
expression: "&combined"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; some comment
; another comment
static
.class public HelloWorld
----- STDERR -----
Error: unexpected keyword before class definition
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/jasm/test_data/integration/error/parser/outside_class_directive/static_keyword.ja:3:1 ]
   │
 3 │ static
   │ ───┬──  
   │    ╰──── this keyword must appear inside a class definition
   │ 
   │ Note: Access flags must appear within a '.class' or '.method' directive.
───╯
----- HASH -----
not generated
